--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.dingzk</groupId>
-    <artifactId>springboot-init</artifactId>
+    <artifactId>springboot-init-ding</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springboot-init</name>
+    <name>springboot-init-ding</name>   <!-- todo 更改为自己的项目名 -->
     <description>SpringBoot3.5.6-模板项目</description>
     <properties>
         <java.version>17</java.version>
